revision-derive/tests/compile_fail/type_level_seq_indexed.stderr
error: type-level `seq = "indexed"` is not supported; use the per-field attribute `#[revision(indexed_seq)]` on each sequence-shaped field that should use indexed encoding instead
 --> tests/compile_fail/type_level_seq_indexed.rs:5:43
  |
5 | #[revisioned(revision(1, optimised, seq = "indexed"))]
  |                                           ^^^^^^^^^
